fix horizontal scroll

--- a/source/stylesheets/pages/_home.scss
+++ b/source/stylesheets/pages/_home.scss
@@ -1,3 +1,5 @@
 body {
   color: $white;
+  max-width: 100%;
+  overflow-x: hidden;
 }
