--- a/source/stylesheets/pages/_trump.css.scss
+++ b/source/stylesheets/pages/_trump.css.scss
@@ -3,6 +3,8 @@
   position: relative;
   height: 100vh;
   color: black;
+  width: 100vw;
+  overflow-x: hidden;
   .trump-head {
     position: absolute;
     left: 0;
